﻿$Revision$
	$Author$ $Date$
	1. Node переделан под классический двусвязный список.

#Revision: 1464
	#Author: ctapmex Date: 2010-03-15 11:42:49 +0500 (Пн, 15 мар 2010)
	1. toString переделан в serialize(Writer *writer, short level, short spacesInLevel)
	2. Document::saveToFile убрана

#Revision: 1463
	#Author: ctapmex Date: 2010-03-13 23:46:53 +0500 (Сб, 13 мар 2010)
	1. при сохранении Node в виде строки , преобразуем <>"&' в "правильные" символы 
	2. getCountChild -> getChildrenCount, countSpaceInLevel -> spacesInLevel

#Revision: 1462
	#Author: ctapmex Date: 2010-03-13 22:00:30 +0500 (Сб, 13 мар 2010)
	1. функция Document::saveToFile, сохраняем содержимое в файл.
	2. доп. опция для вывода в файл тестового документа.

#Revision: 1461
	#Author: ctapmex Date: 2010-03-13 20:31:04 +0500 (Сб, 13 мар 2010)
	1. функция Node::toString, возвращает содержимое Node в виде строки
	2. функция Node::getCountChild, возвращает количество детей узла. Нужна для корректного форматирования в toString
	3. доп. опция для вывода на экран toString всего документа.

#Revision: 1460
	#Author: ctapmex Date: 2010-03-12 17:09:13 +0500 (Пт, 12 мар 2010)
	1. При чтении файла сохраняем версию и кодировку xml, а так же наличие BOM.
	2. вывод файла (пока на экран) в "нормализованом виде". каждый элемент с новой строки, отступы, 
		обязательный закрывающий тэг (дажеесли при чтении был один тэг).

#Revision: 1459
	#Author: ctapmex Date: 2010-03-12 14:44:49 +0500 (Пт, 12 мар 2010)
	1. Ошибка в парсинге, приводящая к тому, что '>' в закрывающемся елементе расценивался как "прочий текст".
		В итоге при выводе появлялся дополнительный символ ">" после каждого элемента.

#Revision: 1458
	#Author: ctapmex Date: 2010-03-12 11:46:22 +0500 (Пт, 12 мар 2010)
	1. переделал r1457 пункт 2 - константы выделены в enum NodeType. В итоге эти константы внутри класса,
	можно обращаться к ним как Node::ELEMENT_NODE , так же можно использовать в  switch/case. 


#Revision: 1457